--- a/index.html
+++ b/index.html
@@ -3,12 +3,29 @@
 <head>
   <title>Audio Player</title>
   <style>
+    body {
+      background-color: #f9f9f6; /* off-white background for the page */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+
+    .audio-wrapper {
+      background-color: #2e7d32; /* green background for the audio block */
+      padding: 20px;
+      border-radius: 0px; /* rectangular shape */
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
     audio {
-      width: 600px;
+      width: 300px;
+      background-color: #2e7d32; /* ensures green background on supported browsers */
     }
 
     audio::-webkit-media-controls-enclosure {
-      overflow: hidden;
+      border-radius: 0px;
     }
 
     audio::-webkit-media-controls-download-button {
@@ -17,9 +34,11 @@
   </style>
 </head>
 <body>
-  <audio controls controlsList="nodownload">
-    <source src="https://files.elfsightcdn.com/eafe4a4d-3436-495d-b748-5bdce62d911d/8f09e6b6-e310-4681-9c87-f3a5886676ae/Audio-1-The-Messy-Middle.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
+  <div class="audio-wrapper">
+    <audio controls controlsList="nodownload">
+      <source src="https://files.elfsightcdn.com/eafe4a4d-3436-495d-b748-5bdce62d911d/8f09e6b6-e310-4681-9c87-f3a5886676ae/Audio-1-The-Messy-Middle.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+    </audio>
+  </div>
 </body>
 </html>
