--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Styled Audio Player</title>
+  <title>Simple Audio Player</title>
   <style>
     body {
-      background-color: #f9f9f6;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -13,23 +12,13 @@
     }
 
     .audio-container {
-      background-color: #2e7d32; /* green background */
-      padding: 30px;
-      border-radius: 0;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      width: 350px;
-      text-align: center;
-    }
-
-    .audio-container h2 {
-      color: #fff;
-      font-family: sans-serif;
-      margin-bottom: 20px;
-      font-size: 18px;
+      padding: 20px;
+      border: 1px solid #ccc;
+      border-radius: 0; /* rectangular */
     }
 
     audio {
-      width: 100%;
+      width: 300px;
     }
 
     audio::-webkit-media-controls-enclosure {
@@ -43,6 +32,5 @@
 </head>
 <body>
   <div class="audio-container">
-    <h2>Now Playing</h2>
     <audio controls controlsList="nodownload">
-      <source src="https://files.elfsightcdn.com/eafe4a4d-3436-495d-b748-5bdce62d911d/8f09e6b6-e310-4681-9c87-f3a5886676ae/Audio-1-The-Messy-Middle.mp3" type="audio/mpeg">
+      <source src="https://files.elfsightcdn.com/eafe4a4d-3436-495d-b748-5bdce62d911d/8f09e6b6-e310-4681-9c87-f3a5886676ae/Audio-1-The-Messy-Middle.mp3" type="
