--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Simple Audio Player</title>
+  <title>Audio Player</title>
   <style>
     body {
       display: flex;
@@ -11,18 +11,12 @@
       margin: 0;
     }
 
-    .audio-container {
-      padding: 20px;
-      border: 1px solid #ccc;
-      border-radius: 0; /* rectangular */
-    }
-
     audio {
       width: 300px;
     }
 
     audio::-webkit-media-controls-enclosure {
-      border-radius: 0;
+      border-radius: 0; /* removes round edges */
     }
 
     audio::-webkit-media-controls-download-button {
@@ -31,6 +25,9 @@
   </style>
 </head>
 <body>
-  <div class="audio-container">
-    <audio controls controlsList="nodownload">
-      <source src="https://files.elfsightcdn.com/eafe4a4d-3436-495d-b748-5bdce62d911d/8f09e6b6-e310-4681-9c87-f3a5886676ae/Audio-1-The-Messy-Middle.mp3" type="
+  <audio controls controlsList="nodownload">
+    <source src="https://files.elfsightcdn.com/eafe4a4d-3436-495d-b748-5bdce62d911d/8f09e6b6-e310-4681-9c87-f3a5886676ae/Audio-1-The-Messy-Middle.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+</body>
+</html>
