--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Audio Player</title>
   <style>
     body {
+      background: transparent;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -13,10 +14,12 @@
 
     audio {
       width: 300px;
+      background-color: transparent;
     }
 
     audio::-webkit-media-controls-enclosure {
-      border-radius: 0; /* removes round edges */
+      border-radius: 0;
+      background-color: transparent;
     }
 
     audio::-webkit-media-controls-download-button {
